cmake_minimum_required(VERSION 2.8)
include(PluginTemplate.cmake)
MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--no-undefined")
project(Plugins)
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS "------------------- Plugins -------------------------")
FOREACH(subdir ${SUBDIRS})
  SET(Plugin_${subdir} true CACHE BOOL "")
  IF(Plugin_${subdir})
    ADD_SUBDIRECTORY(${subdir})
    if(Plugin_${subdir}_available)
      message(STATUS "Plugin ${subdir}: ${Plugin_${subdir}_status}")
    endif()
  ENDIF()
ENDFOREACH()
message(STATUS "------------------- End Plugins ----------------------")

