cmake_minimum_required(VERSION 2.8)
include(PluginTemplate.cmake)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(aquila_plugin_dir "${CMAKE_CURRENT_LIST_DIR}" CACHE INTERNAL "" FORCE)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()
SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-rdynamic")
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--no-undefined")
else()
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/Plugins")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/Plugins")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/Plugins")

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release/Plugins")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release/Plugins")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release/Plugins")

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/Plugins")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/Plugins")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/Plugins")
endif()

macro(set_plugin_available NAME)
    set(Plugin_${NAME}_available ON CACHE INTERNAL "" FORCE)
endmacro()

macro(set_plugin_unavailable NAME)
    set(Plugin_${NAME}_available OFF CACHE INTERNAL "" FORCE)
endmacro()

macro(set_plugin_status NAME STATUS)
    set(Plugin_${NAME}_status "${STATUS}" CACHE INTERNAL "" FORCE)
endmacro()

project(Plugins)
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS "------------------- Plugins -------------------------")
FOREACH(subdir ${SUBDIRS})
  SET(Plugin_${subdir} true CACHE BOOL "")
  IF(Plugin_${subdir})
    ADD_SUBDIRECTORY(${subdir})
  ENDIF()
ENDFOREACH()

message(STATUS "------------------- Disabled plugins-------------------------")
FOREACH(subdir ${SUBDIRS})
  SET(Plugin_${subdir} true CACHE BOOL "")
  IF(Plugin_${subdir})
    if(NOT Plugin_${subdir}_available)
        message(STATUS "Plugin ${subdir} not available due to: ${Plugin_${subdir}_status}")
    endif()
  else()
    message(STATUS "Plugin ${subdir} disabled by user")
  ENDIF()
ENDFOREACH()


message(STATUS "------------------- Enabled plugins-------------------------")
add_custom_target(aquila_plugins)
FOREACH(subdir ${SUBDIRS})
  IF(Plugin_${subdir})
    if(Plugin_${subdir}_available)
        message(STATUS "${subdir}: ${Plugin_${subdir}_status}")
        add_dependencies(aquila_plugins ${subdir})
    endif()
  ENDIF()
ENDFOREACH()
message(STATUS "------------------- End Plugins ----------------------")
