project(cuda_utils)

find_package(OpenCV QUIET COMPONENTS cudaarithm core)
if(OpenCV_FOUND)
  include_directories(${OpenCV_INCLUDE_DIRS})
  include_directories("include")
  file(GLOB_RECURSE hdr "include/*.hpp" "include/*.h")
  file(GLOB_RECURSE src "src/*.cpp")
  file(GLOB_RECURSE knl "src/cuda/*.cu")
  add_library(cuda_utils SHARED ${hdr} ${src} ${knl})
  target_link_libraries(cuda_utils ${OpenCV_LIBS})
endif()